--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"
     />
-    <meta property="og:title" content="OSSPH Freefolio - Plain Template"/>
-    <meta property="og:description" content="100% FREE Professional Portfolio Templates - Plain Template"/>
+    <meta property="og:title" content="Quit Your Job Through Day Trading"/>
+    <meta property="og:description" content="Learning To Trade With Banks and Algorithms"/>
     <meta property="og:type" content="website" />
     <meta
         property="og:image"
@@ -20,8 +20,8 @@
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:alt" content="OSSPH Freefolio">
-    <meta name="twitter:title" content="OSSPH Freefolio - Plain Template" />
-    <meta name="twitter:description" content="100% FREE Professional Portfolio Templates - Plain Template" />
+    <meta name="twitter:title" content="TPAcademy" />
+    <meta name="twitter:description" content="TPAcademy" />
     <title>
       TPAcademy | The Way Of Algorithmic Trading by ICT Students
     </title>
