--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               >
                 <div class="row justify-center">
                   <div class="text-center col-md-10 col-12">
-                    <h1 data-aos="fade-up">#Recent Works</h1>
+                    <h1 data-aos="fade-up">The Honest Truth</h1>
                   </div>
                   <div class="text-center col-sm-6 col-md-4 col-12">
                     <a
@@ -205,15 +205,14 @@
                       data-aos="fade-up"
                     >
                       <div class="v-card__text">
-                        <h2>Vue Stripe Checkout</h2>
+                        <h2>Know What You're Getting Into</h2>
                         <br />
                         <p>
-                          Mollit dolor tempor adipisicing non pariatur in tempor
-                          cillum do. In officia ullamco laborum ullamco
-                          voluptate. Laboris sunt quis enim Lorem laboris
-                          aliquip duis non magna excepteur voluptate. Pariatur
-                          velit aliquip officia nulla anim reprehenderit
-                          deserunt. Sint nostrud ipsum do aliquip.
+                          Trading is often mistaken for a shortcut to wealth, a fast-paced world where fortunes are made in the blink of an eye. But this couldn't be further from the truth. It's a complex game, demanding more than just time and effort—it requires an unwavering commitment to learning and discipline.
+
+Patience is not just a virtue in trading; it's a necessity. The market is unforgiving to those who seek quick profits without understanding the intricacies of economic indicators, chart patterns, and the psychological fortitude needed to endure losses. Each impulsive decision can lead to significant financial setbacks. It's not just about the money you invest, but also about the money you might never see again if patience isn't at the core of your strategy.
+
+Furthermore, trading is not just about making trades; it's about making the right trades at the right time. It's about sitting on your hands when everything in you screams to act. The market's volatility is a test of your resolve, and without a solid plan and the patience to stick to it, you're setting yourself up for a fall.
                         </p>
                       </div>
                     </a>
